[package]
name = "asterisk-rs"
version = "0.1.0"
edition = "2021"
description = "LR(1) parser generator"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
either = "1.10.0"
itertools = "0.12.1"
logos = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
